# iqcss

./: .gitignore  README.md  pyproject.toml
example/: example.qmd
iqcss/: __init__.py  cleaners.py  data.py  networks.py  paths.py  plotting.py  style.py  text.py  utils.py  youtube.py
iqcss/data/wnba/: wnba.csv  wnba_player_text.csv  wnba_team_rosters_2024.csv
iqcss/data/youtube/: comments_sampled.csv
iqcss/data/youtube/yearly/: comments_2009.csv  comments_2010.csv  comments_2011.csv  comments_2012.csv  comments_2013.csv  comments_2014.csv  comments_2015.csv  comments_2024.csv
