[tool.poetry]
name = "iqcss"
packages = [{ include = "iqcss" }]
version = "0.1.0"
description = ""
authors = ["John McLevey <mclevey@mun.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
bertopic = "*"
bs4 = "*"
gensim = "*"
google-api-python-client = "*"
hdbscan = "*"
ipykernel = "^6.29.5"
matplotlib = "*"
numpy = "^2.1.1"
pandas = "*"
pyprojroot = "^0.3.0"
python = ">=3.11,<4.0"
python-dotenv = "*"
pyyaml = "*"
rich = "*"
scikit-learn = "^1.5.1"
scipy = "*"
seaborn = "^0.13.2"
sentence-transformers = "*"
spacy = "*"
tqdm = "*"
transformers = "*"
umap-learn = "*"
pygraphviz = "^1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
