[tool.poetry]
name = "iqcss"
packages = [{ include = "iqcss" }]
version = "0.1.0"
description = ""
authors = ["John McLevey <mclevey@mun.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
gensim = "^4.3.0" # pinned for colab compatibility
ipykernel = "6.17.1" # pinned for colab compatibility
jupyter-client = ">=5.3.4,<8.0" # pinned for colab compatibility
numpy = ">=1.18.5" # pinned for colab compatibility
python = ">=3.11,<4.0" # pinned for colab compatibility
scikit-learn = "^1.5.1" # pinned for colab compatibility
seaborn = "^0.13.2" # pinned for colab compatibility
bertopic = "*"
bs4 = "*"
google-api-python-client = "*"
hdbscan = "*"
matplotlib = "*"
pandas = "*"
python-dotenv = "*"
pyyaml = "*"
rich = "*"
scipy = "*"                   
sentence-transformers = "*"
spacy = "*"
tqdm = "*"
transformers = "*"
umap-learn = "*"

[tool.poetry.extras]
colab = [] 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
