[tool.poetry]
name = "iqcss"
packages = [{ include = "iqcss" }]
version = "0.1.0"
description = ""
authors = ["John McLevey <mclevey@mun.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
bertopic = "*"
bs4 = "*"
gensim = "^4.3.0"
google-api-python-client = "*"
hdbscan = "*"
matplotlib = "*"
numpy = ">=1.18.5"
pandas = "*"
python = ">=3.11,<4.0"
python-dotenv = "*"
pyyaml = "*"
rich = "*"
scikit-learn = "^1.5.1"
scipy = "*"
seaborn = "^0.13.2"
sentence-transformers = "*"
spacy = "*"
tqdm = "*"
transformers = "*"
umap-learn = "*"

[tool.poetry.group.jupyter.dependencies]
ipykernel = "*"
jupyter-client = "*"

[tool.poetry.extras]
colab = [] 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
